@@ -62,6 +62,7 @@
 #include <klistview.h>
 #include <kfiledialog.h>
 #include <koSpellConfig.h>
+#include <koeditpath.h>
 
 KPConfig::KPConfig( KPresenterView* parent )
   : KDialogBase(KDialogBase::IconList,i18n("Configure KPresenter") ,
@@ -895,6 +896,7 @@ ConfigurePathPage::ConfigurePathPage( KPresenterView *_view, QVBox *box, char *n
     m_pPathView->addColumn( i18n( "Type" ) );
     m_pPathView->addColumn( i18n( "Path" ) );
     (void) new QListViewItem( m_pPathView, i18n("Picture path"),doc->picturePath() );
+    (void) new QListViewItem( m_pPathView, i18n("Backup path"),doc->backupPath() );
 
     m_modifyPath = new QPushButton( i18n("Modify path..."), gbPathGroup);
     connect( m_modifyPath, SIGNAL( clicked ()), this, SLOT( slotModifyPath()));
@@ -923,6 +925,16 @@ void ConfigurePathPage::slotModifyPath()
         }
         delete dlg;
     }
+    if ( item && (item->text(0)==i18n("Backup path")))
+    {
+        KoChangePathDia *dlg = new KoChangePathDia( item->text(1), 0L, "backup path" );
+        if (dlg->exec() )
+        {
+            item->setText(1, dlg->newPath());
+        }
+        delete dlg;
+    }
+
 }
 
 void ConfigurePathPage::slotDefault()
@@ -930,15 +942,29 @@ void ConfigurePathPage::slotDefault()
     QListViewItem * item = m_pPathView->findItem(i18n("Picture path"), 0);
     if ( item )
         item->setText(1, KGlobalSettings::documentPath());
+    item = m_pPathView->findItem(i18n("Backup path"), 0);
+    if ( item )
+        item->setText(1, QString::null );
 }
 
 void ConfigurePathPage::apply()
 {
-    QListViewItem * item = m_pPathView->findItem(i18n("Picture path"), 0);
+    QListViewItem *item = m_pPathView->findItem(i18n("Backup path"), 0);
     if ( item )
     {
-        QString res = item->text(1);
-        if ( res !=m_pView->kPresenterDoc()->picturePath())
+        QString res = item->text(1 );
+        if ( res != m_pView->kPresenterDoc()->backupPath())
+        {
+            config->setGroup( "Kpresenter Path" );
+            m_pView->kPresenterDoc()->setBackupPath( res );
+            config->writeEntry( "backup path",res );
+        }
+    }
+    item = m_pPathView->findItem(i18n("Picture path"), 0);
+    if ( item )
+    {
+        QString res = item->text(1 );
+        if ( res != m_pView->kPresenterDoc()->picturePath())
         {
             config->setGroup( "Kpresenter Path" );
             m_pView->kPresenterDoc()->setPicturePath( res );
