@@ -137,3 +137,4 @@ Changes after KPresenter 1.2
 - Add new font attribute : small caps
 - Now we can modify "ignore list"
 - Now we can modify personal dictonary
+- Now we can change backup path
